--- a/web/src/main/bvmui/package.json
+++ b/web/src/main/bvmui/package.json
@@ -6,6 +6,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint --no-fix",
+    "lint:fix": "vue-cli-service lint --fix",
     "test": "vue-cli-service test:unit -i"
   },
   "dependencies": {
